--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 body {
   background-color: #040404;
+  font-family: "Raleway", sans-serif;
+
 }
 
 @keyframes slideInLeft {
   from {
     transform: translateX(-100%);
   }
+
   to {
     transform: translateX(0);
   }
 }
+
 .animated-slideInLeft {
   animation: slideInLeft 3s ease-in-out;
 }
@@ -22,10 +31,12 @@ body {
   from {
     transform: translateX(100%);
   }
+
   to {
     transform: translateX(0);
   }
 }
+
 .animated-slideInRight {
   animation: slideInRight 3s ease-in-out;
 }
@@ -34,10 +45,12 @@ body {
   from {
     transform: translateY(-100%);
   }
+
   to {
     transform: translateY(0);
   }
 }
+
 .animated-slideInTop {
   animation: slideInTop 1s ease-out;
 }
@@ -46,10 +59,19 @@ body {
   from {
     transform: translateY(100%);
   }
+
   to {
     transform: translateY(0);
   }
 }
+
 .animated-slideInBottom {
   animation: slideInBottom 0.5s ease-in;
+}
+
+h1,
+h2 {
+  font-family: "Anton", sans-serif;
+  /* increase space between words */
+  letter-spacing: 1px;
 }
